...

import cz.tomasjanicek.bp.model.Doctor

object DoctorData {
    val defaultDoctors = listOf(
        Doctor(
            specialization = "Praktický lékař",
            image = "prakticky_lekar" // název obrázku v drawable (bez .png/.xml)
        ),
        Doctor(
            specialization = "Zubař",
            image = "doctor_dentist"
        ),
        Doctor(
            specialization = "Gynekolog",
            image = "doctor_gyn"
        ),
...
